# claude-from-here

./: .gitignore  CLAUDE.md  CMakeLists.txt  GETTING-STARTED.md  LICENSE  README.md  build-installer.ps1  claude-from-here-uninstall.reg  claude-from-here.reg
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/resolved/: context-menu-missing-after-phase4.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md
.planning/phases/02-launcher-and-config/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md
.planning/phases/03-installer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/phases/04-distribution/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
installer/: ClaudeFromHere.iss
package/: AppxManifest.xml
scripts/: register.ps1  unregister.ps1
src/: ClaudeFromHere.cpp  ClaudeFromHere.def  ClaudeFromHere.manifest  ClaudeFromHere.rc  dllmain.cpp  stub_main.cpp
src/ClaudeFromHereConfig/: App.xaml  App.xaml.cs  ClaudeFromHereConfig.csproj  MainForm.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs
(+11 files in other folders)
